--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,6 @@ scala:
   - 2.11.7
 before_install:
   - git clone --recursive https://github.com/dmlc/xgboost
-  - cd xgboost/jvm-packages; mvn clean install -DskipTests >> xgboost.out 2>&1
+  - cd xgboost/jvm-packages; mvn clean install -DskipTests >> xgboost.out 2>&1; cd ../../
 install:
   - sbt ++2.11.7 test
