--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,9 @@ scala:
 before_install:
   - git clone --recursive https://github.com/dmlc/xgboost
   - pwd
-  - ls /home/travis/build/deil87/.m2/repository/ml/dmlc/xgboost4j/0.7/
+  - ls /home/travis/
+  - ls /home/travis/build/
+  - ls /home/travis/build/deil87/
   - cd xgboost/jvm-packages; mvn clean install -DskipTests; cd ../
 install:
   - sbt ++2.11.7 test
