Added logback for logging.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,6 @@ scala:
   - 2.11.7
 before_install:
   - git clone --recursive https://github.com/dmlc/xgboost
-  - cd xgboost/jvm-packages; mvn -q clean install -DskipTests; cd ../../
+  - cd xgboost/jvm-packages; mvn -q clean install -DskipTests -Dmaven.test.skip=true; cd ../../
 install:
   - sbt ++2.11.7 test
