--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ before_install:
   - git clone --recursive https://github.com/dmlc/xgboost
   - cd xgboost/jvm-packages; mvn -q clean install -DskipTests -Dmaven.test.skip=true; cd ../../
 install:
-  - sbt ++2.11.7 test
+  - sbt ++2.11.7 -q test
