WIP. Adding hyper parameter coevolution. Introduced configuration section for hpDimension in application.conf

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,3 +1,13 @@
+evolution {
+  templateDimension {
+
+  }
+
+  hyperParameterDimension {
+    numOfEvolutionsPerGen = 5
+  }
+}
+
 sqliteSber = {
   url = "jdbc:sqlite:/Users/deil/Development/sqliteData/test.db"
   driver = org.SQLite.Driver
