WIP Integration of HyperParameters coevolution into Template evolution. Added loading configurations from typesafe config. Added separate logger appender for hyperparameter coevolution.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,9 +1,11 @@
 evolution {
   templateDimension {
+    name = "Template evolution"
 
   }
 
   hyperParameterDimension {
+    name = "Hyper-parameter evolution"
     numOfEvolutionsPerGen = 5
   }
 }
