Preparations for consistency benchmarking.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -2,6 +2,9 @@ evolution {
   templateDimension {
     name = "Template evolution"
     populationSize = 7
+    poolOfSimpleModels = ["logistic_regression", "decision_tree"]
+    poolOfEnsemblingModels = ["bagging", "stacking"]
+    maxEnsembleDepth = 3
   }
 
   hyperParameterDimension {
