Added check for rows order consistency. Added test for plotting.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -13,6 +13,8 @@ evolution {
   }
 }
 
+consistencyCheck = true
+
 sqliteSber = {
   url = "jdbc:sqlite:/Users/deil/Development/sqliteData/test.db"
   driver = org.SQLite.Driver
