Added generic evolution builder. Added mixed hyperparameters field evaluator.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -9,7 +9,9 @@ evolution {
 
   hyperParameterDimension {
     name = "Hyper-parameter evolution"
+    populationSize = 10
     numOfEvolutionsPerGen = 5
+    evaluationSamplingRatio = 0.5
   }
 }
 
