Added ability to run random grid search for hyperparameters. Added ability to override config for the sake of testing.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -8,11 +8,14 @@ evolution {
   }
 
   hyperParameterDimension {
+    enabled = true
     name = "Hyper-parameter evolution"
     populationSize = 10
     numOfEvolutionsPerGen = 5
     evaluationSamplingRatio = 0.5
   }
+
+  hpGridSearch = true
 }
 
 consistencyCheck = true
