Added ability to disable hyperparameters coevolution. Added test GlassOnlyDecisionTreesEnsembleSuite that check that with depth 1 ensemble of Decision trees we are doing better than just with Decision tree.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,6 +1,7 @@
 evolution {
   templateDimension {
     name = "Template evolution"
+    enabled = true
     populationSize = 7
     poolOfSimpleModels = ["logistic_regression", "decision_tree"]
     poolOfEnsemblingModels = ["bagging", "stacking"]
