AG-144 Introduced config parameter for maxNumberOfMutationAttempts for DepthDependentTemplateMutationStrategy

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -6,6 +6,7 @@ evolution {
     poolOfSimpleModels = ["logistic_regression", "decision_tree"]
     poolOfEnsemblingModels = ["bagging", "stacking"]
     maxEnsembleDepth = 3
+    maxNumberOfMutationAttempts = 15
   }
 
   hyperParameterDimension {
