AG-145 Introduced config parameter pivotBetweenStructureAndHPMutations that determine probability of applying structural vs hyper parameters mutation

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -7,6 +7,7 @@ evolution {
     poolOfEnsemblingModels = ["bagging", "stacking"]
     maxEnsembleDepth = 3
     maxNumberOfMutationAttempts = 15
+    pivotBetweenStructureAndHPMutations = 0.5
   }
 
   hyperParameterDimension {
