--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -8,6 +8,7 @@ evolution {
     maxEnsembleDepth = 3
     maxNumberOfMutationAttempts = 15
     pivotBetweenStructureAndHPMutations = 0.5
+    testSplitRatio = 0.3
   }
 
   hyperParameterDimension {
