AG-167 Propagate knowledge from leaf to parent node when exploration of hps was done

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -7,7 +7,7 @@ evolution {
     poolOfEnsemblingModels = ["bagging", "stacking"]
     maxEnsembleDepth = 3
     maxNumberOfMutationAttempts = 50
-    pivotBetweenStructureAndHPMutations = 0.5
+    pivotBetweenStructureAndHPMutations = 0.2 // meaning that with probbability of 0.8 we will mutate HPs
     validationStrategy = "cv" // "tt" - train test
     testSplitRatio = 0.3
   }
