AG-181 Added balance dataset. Added forgotten configuration for frequency of random mutations.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -18,6 +18,7 @@ evolution {
     populationSize = 10
     numOfEvolutionsPerGen = 5
     evaluationSamplingRatio = 0.5
+    randomMutationFrequency = 0.2
   }
 
   hpGridSearch = true
