--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,9 @@ scala:
 before_install:
   - git clone --recursive https://github.com/dmlc/xgboost
   - cd xgboost/jvm-packages; mvn -q clean install -DskipTests -Dmaven.test.skip=true; cd ../../
+
+install:
+  gradle wrapper --gradle-version 4.2
+
 script:
   - ./gradlew clean test --info
