Testing conditions in the travis yml config

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,11 @@ language: scala
 scala:
   - 2.12
   -
-#before_install:
-#  - git clone --recursive https://github.com/dmlc/xgboost
-#  - cd xgboost/jvm-packages; mvn -q clean install -DskipTests -Dmaven.test.skip=true; cd ../../
+before_install:
+  - git clone --recursive https://github.com/dmlc/xgboost
+  when: "xgboost".stat.exists
+  - cd xgboost/jvm-packages; mvn -q clean install -DskipTests -Dmaven.test.skip=true; cd ../../
+  when: "xgboost".stat.exists
 
 install:
   gradle wrapper --gradle-version 5.6.2
