AG-178 Added logging of the confusion metric from classification cases.

--- a/benchmark/build.gradle
+++ b/benchmark/build.gradle
@@ -24,9 +24,9 @@ sourceSets {
     main {
         resources {
             srcDirs += [
-                    "$rootDir/data"
+                    "$rootDir/data",
 //                    rootProject.sourceSets.main.resources,
-//                    rootProject.sourceSets.test.resources
+                    rootProject.sourceSets.test.resources
             ]
         }
     }
