AG-196: Add theBiggerTheBetter logic that depends on the corresponding metric

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -12,6 +12,15 @@ evolution {
     testSplitRatio = 0.3
   }
 
+  evaluation {
+    regression {
+
+    }
+    multiclass {
+      metric = "logloss" // f1
+    }
+  }
+
   hyperParameterDimension {
     enabled = true
     name = "Hyper-parameter evolution"
