--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,4 @@
 language: scala
-scala:
-  - 2.12
 
 #before_install:
 #  - git clone --recursive https://github.com/dmlc/xgboost
@@ -10,7 +8,7 @@ install:
   gradle wrapper --gradle-version 5.6.2
 
 script:
-  - ./gradlew clean test --debug
+  - ./gradlew clean test --info
 
 cache:
   directories:
