AG-202: enabling caching for dependencies downloaded by gradle

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,4 +15,6 @@ script:
 cache:
   directories:
     - xgboost
-    - $HOME/.m2
+    - $HOME/.gradle/caches/
+    - $HOME/.gradle/wrapper/
+#    - $HOME/.m2
