--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ install:
   gradle wrapper --gradle-version 5.6.2
 
 script:
-  - ./gradlew clean test --info
+  - ./gradlew clean test -PisCI=true --info
 
 cache:
   directories:
