--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,8 @@ install:
   gradle wrapper --gradle-version 5.6.2
 
 script:
-  - travis_wait 30 ./gradlew clean test -PisCI=true --info
+  #- travis_wait 30 ./gradlew clean test -PisCI=true --info
+  - ./gradlew clean test -PisCI=true --info
 
 cache:
   directories:
