Added skipping on earlier fold evaluations. Fixed hps ranges

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -8,7 +8,7 @@ evolution {
     maxEnsembleDepth = 3
     maxNumberOfMutationAttempts = 50
     pivotBetweenStructureAndHPMutations = 0.2 // meaning that with probbability of 0.8 we will mutate HPs
-    validationStrategy = "cv" // "tt" - train test
+    validationStrategy = "tt" // "tt" - train test
     testSplitRatio = 0.3
   }
 
