Fixed checkOrderOfPredictionsIsTheSame method in NeighboursFinder

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -9,10 +9,11 @@ evolution {
     maxNumberOfMutationAttempts = 50
     pivotBetweenStructureAndHPMutations = 0.2 // meaning that with probbability of 0.8 we will mutate HPs
     validationStrategy = "tt" // "tt" - train test
-    testSplitRatio = 0.3
+    globalCVNumFolds = 5
+    testSplitRatio = 0.3 // maybe unnecessary
   }
 
-  evaluation {
+  evaluation { // move it inside templateDimension
     regression {
 
     }
@@ -30,7 +31,7 @@ evolution {
     randomMutationFrequency = 0.2
   }
 
-  hpGridSearch = true
+  hpGridSearch = true // move to templateDimension
 }
 
 consistencyCheck = true
