--- a/build.gradle
+++ b/build.gradle
@@ -13,11 +13,12 @@ version = '0.1.0-SNAPSHOT'
 
 ext {
   javaslangVersion = '2.0.5'
-  scalaMajorVersion = '2.12'
-  scalaMinorVersion = '1'
+  scalaMajorVersion = '2.11'
+  scalaMinorVersion = '12'
   scalaVersion = "${scalaMajorVersion}.${scalaMinorVersion}"
-  sparkVersion = '2.4.0'
+  sparkVersion = '2.4.3'
   deeplearning4jVersion = '0.9.1'
+  xgboostSparkVersion = '0.90'
 }
 
 allprojects {
@@ -92,6 +93,11 @@ dependencies {
   compile "nz.ac.waikato.cms.weka:weka-stable:3.8.1"
   compile "nz.ac.waikato.cms.weka:SMOTE:1.0.3"
 
+  // XGBoost
+  compile ("ml.dmlc:xgboost4j-spark:0.90") {
+    exclude group: 'org.apache.spark'
+  }
+  
   // Deeplearning4j
   compile "org.bytedeco:javacpp:1.3.3'"
   compile "org.nd4j:nd4j-native:${deeplearning4jVersion}"
