AG-227: sort population to optimise time utilisation. Added skipping ratio to config.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -10,6 +10,7 @@ evolution {
     pivotBetweenStructureAndHPMutations = 0.2 // meaning that with probbability of 0.8 we will mutate HPs
     validationStrategy = "tt" // "tt" - train test
     globalCVNumFolds = 5
+    globalCVSkippingRatio = 1.5
     testSplitRatio = 0.3 // maybe unnecessary
   }
 
