AG-229: added Bagging hyperparameters. disabled hp grid search by default

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -32,7 +32,7 @@ evolution {
     randomMutationFrequency = 0.2
   }
 
-  hpGridSearch = true // move to templateDimension
+  hpGridSearch = false // move to templateDimension
 }
 
 consistencyCheck = true
