--- a/webserver/build.gradle
+++ b/webserver/build.gradle
@@ -29,3 +29,15 @@ dependencies {
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
+
+sourceSets {
+    main {
+        resources {
+            srcDirs += [
+                    "$rootDir/data",
+//                    rootProject.sourceSets.main.resources,
+                    rootProject.sourceSets.test.resources
+            ]
+        }
+    }
+}
