--- a/webserver/src/main/resources/static/automl-app/package.json
+++ b/webserver/src/main/resources/static/automl-app/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --open --mode development",
-    "build": "webpack --mode production"
+    "build_prod": "webpack --mode production",
+    "build": "webpack --mode development"
   },
   "keywords": [],
   "author": "",
