--- a/webserver/src/main/resources/static/automl-app/package.json
+++ b/webserver/src/main/resources/static/automl-app/package.json
@@ -26,9 +26,12 @@
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
+    "d3": "^5.15.0",
     "d3-array": "^2.4.0",
     "d3-scale": "^3.2.1",
     "d3-selection": "^1.4.1",
+    "d3-transition": "^1.3.2",
+    "jquery": "^3.4.1",
     "lodash": "^4.17.15"
   }
 }
