--- a/webserver/src/main/resources/static/automl-app/package.json
+++ b/webserver/src/main/resources/static/automl-app/package.json
@@ -31,8 +31,11 @@
   "dependencies": {
     "d3": "^5.15.0",
     "d3-array": "^2.4.0",
+    "d3-format": "^1.4.4",
     "d3-scale": "^3.2.1",
     "d3-selection": "^1.4.1",
+    "d3-time": "^1.1.0",
+    "d3-time-format": "^2.2.3",
     "d3-transition": "^1.3.2",
     "jquery": "^3.4.1",
     "lodash": "^4.17.15"
