--- a/webserver/src/main/resources/static/automl-app/package.json
+++ b/webserver/src/main/resources/static/automl-app/package.json
@@ -16,19 +16,25 @@
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.0",
     "@babel/preset-react": "^7.9.4",
+    "autoprefixer": "^9.7.5",
     "babel-loader": "^8.1.0",
     "css-loader": "^3.4.2",
+    "exports-loader": "^0.7.0",
     "html-loader": "^1.0.0",
     "html-webpack-plugin": "^4.0.4",
     "mini-css-extract-plugin": "^0.9.0",
+    "node-sass": "^4.13.1",
+    "postcss-loader": "^3.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
+    "bootstrap": "^4.4.1",
     "d3": "^5.15.0",
     "d3-array": "^2.4.0",
     "d3-format": "^1.4.4",
@@ -38,6 +44,7 @@
     "d3-time-format": "^2.2.3",
     "d3-transition": "^1.3.2",
     "jquery": "^3.4.1",
-    "lodash": "^4.17.15"
+    "lodash": "^4.17.15",
+    "popper.js": "^1.16.1"
   }
 }
